# re-aiogram

./: LICENSE  README.md  pyproject.toml
re_aiogram/: __init__.py
re_aiogram/dispatcher/: __init__.py
re_aiogram/exceptions/: __init__.py
re_aiogram/loggers/: __init__.py
re_aiogram/webhook/: __init__.py
src/re_aiogram/client/: __init__.py
src/re_aiogram/core/: __init__.py  bot.py  bot.pyi  mediagroup.py
src/re_aiogram/enums/: __init__.py
src/re_aiogram/filters/: __init__.py
src/re_aiogram/fsm/: __init__.py
src/re_aiogram/handlers/: __init__.py
src/re_aiogram/methods/: __init__.py
src/re_aiogram/types/: __init__.py
src/re_aiogram/utils/: __init__.py
